--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage[spanish]{babel}
 \usepackage[backend=biber]{biblatex}
 \usepackage{csquotes}
+\usepackage{float}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -67,5 +68,5 @@
 \maketitle
 \input{Lib/Chapter_1.tex}
 \input{Lib/Chapter_2.tex}
-\printbibliography
+\printbibliography;
 \end{document}
