--- a/Lib/Chapter_2.tex
+++ b/Lib/Chapter_2.tex
@@ -7,7 +7,7 @@ probemos los snippets ej:\ref{tab:ejemplo_3x3}
 \end{equation}
 
 
-Con las matrices una 3X3, pimpimpampam.
+Con las matrices una 3x3, pimpimpampam.
 \begin{table}[ht]
 \centering
 \begin{tabular}{|c|c|c|}
@@ -27,4 +27,8 @@ Con las matrices una 3X3, pimpimpampam.
 \label{fig:ejemplo_imagen}
 \end{figure}
 
-pongamos mas texto porque si xd, la imagen se desfasa 
+pongamos mas texto porque si xd, la imagen se desfasa, 
+\begin{align*}
+\int_{0}^{\infty} x^2 & = 0\\
+\dot{x} & =\frac{dx}{dt} 
+\end{align*}
