--- a/Lib/Chapter_2.tex
+++ b/Lib/Chapter_2.tex
@@ -32,3 +32,11 @@ pongamos mas texto porque si xd, la imagen se desfasa,
 \int_{0}^{\infty} x^2 & = 0\\
 \dot{x} & =\frac{dx}{dt} 
 \end{align*}
+
+Introducimos una ecuación diferencial con lagrangiano
+\begin{equation}
+\mathcal{L} = \frac{1}{2} m \dot{x}^2 - V(x)
+\end{equation}
+\begin{equation}
+    \frac{\partial \mathcal{L}}{\partial q} - \frac{d}{dt} \left( \frac{\partial \mathcal{L}}{\partial \dot{q}} \right) = 0
+\end{equation}
